css profile image bottom margin for large screen

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <p>I am an accomplished musician and teacher with big passion for web development. My first serious project was
           <a target="_blank" href="https://note-learning-game.herokuapp.com/">Note-Learning Game</a>
-          which makes learning how to read music fun. This app has been successfully used by music educators and studensts.
+          which is an app that makes learning how to read music fun. It has been used successfully by music educators and studensts.
         </p>
         <p>I plan to add more content to this page later. In the mean time, I have to fill it with Lorem ipsum dolor sit, amet
           consectetur adipisicing elit. Dolores blanditiis minus aperiam eligendi asperiores, eaque veniam exercitationem
